<resources>
    <string name="app_name">RegistrationAppWithMvvm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_name">name</string>
    <string name="enter_phone">phone</string>
    <string name="email">email</string>
    <string name="address">address</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="register">Register</string>
    <string name="go_to_login">i\'m already have an account go to login</string>
    <string name="go_to_register">i\'m not have an account ? create account</string>
    <string name="password">password</string>
    <string name="welcome_back_my_friend">Welcome Back My Friend</string>
    <string name="Logout">log-out</string>
</resources>