<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:background="@color/colorDark"
    tools:context=".ui.home.HomeFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_undraw_welcome_3gvl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:id="@+id/SecondLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/contact_InputName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/custom_edit_text_shape"
            android:drawableStart="@drawable/ic_iconfinder_user_plus"
            android:drawablePadding="10dp"
            android:drawableTint="@color/White"
            android:hint="@string/enter_name"
            android:inputType="textPersonName"
            android:maxLength="15"
            android:paddingStart="10dp"
            android:textColor="@color/White"
            android:textColorHint="@color/purple_200"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry"
            tools:targetApi="m" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/contact_InputID"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_edit_text_shape"
            android:drawableStart="@drawable/ic_round_phone_24"
            android:drawablePadding="10dp"
            android:drawableTint="@color/White"
            android:hint="@string/enter_phone"
            android:inputType="phone"
            android:paddingStart="10dp"
            android:textColor="@color/White"
            android:textColorHint="@color/purple_200"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry"
            tools:targetApi="m" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/contact_InputEmail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_edit_text_shape"
            android:drawableStart="@drawable/ic_iconfinder_icons_email"
            android:drawablePadding="10dp"
            android:drawableTint="@color/White"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="25"
            android:paddingStart="10dp"
            android:textColor="@color/White"
            android:textColorHint="@color/purple_200"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry"
            tools:targetApi="m" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_Logout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/custom_one_shape_button"
            android:text="@string/Logout"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/SecondLayout" />

    </LinearLayout>


    <ProgressBar
        android:id="@+id/loginProgressBar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="190dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.06" />

</androidx.constraintlayout.widget.ConstraintLayout>